force-app/main/default/objects/Workout_Set__c/Workout_Set__c.object-meta.xml
<CustomObject>
    <description>Sets of a Workout performed</description>
    <label>Workout Set</label>
    <nameField>
        <displayFormat>SET-{00000}</displayFormat>
        <label>Workout Set Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workout Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>