force-app/main/default/objects/Workout_Set__c/fields/Reps__c.field-meta.xml
<CustomField>
    <fullName>Reps__c</fullName>
    <description>Reps of a Workout performed in a Set</description>
    <label>Reps</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>