force-app/main/default/objects/Workout_Set__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight with which a Rep is performed in this Set</description>
    <inlineHelpText>Weight with which a Rep is performed in this Set</inlineHelpText>
    <label>Weight</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>