force-app/main/default/objects/Workout_Set__c/fields/Weight_Unit__c.field-meta.xml
<CustomField>
    <fullName>Weight_Unit__c</fullName>
    <description>Unit of the Weight with which a single Rep is performed</description>
    <inlineHelpText>Unit of the Weight with which a single Rep is performed</inlineHelpText>
    <label>Weight Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>kg</fullName>
                <default>true</default>
                <label>kg</label>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>