force-app/main/default/objects/Workout_Set__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <label>Workout</label>
    <referenceTo>Workout__c</referenceTo>
    <relationshipLabel>Workout Sets</relationshipLabel>
    <relationshipName>Workout_Sets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>